# sharded-noise-server

./: .gitignore  Cargo.toml  README.md
central/src/: main.rs  test.rs
centralshard/: Cargo.toml
go-src/: sharded_server.go
go-src/storage/: OPTIONS-000003
parallel-networked-server/: Cargo.toml
parallel-networked-server/src/: main.rs  sequencer.rs  shard.rs
parallel-server/: Cargo.toml  README.md
parallel-server/src/: main.rs  sequencer.rs  shard.rs
parallel-server/tests/: get.yml  integration.rs  post.yml
parallel-server/tests/common/: mod.rs
src/: main.rs
tests/: README.md
tests/drill/: get.yml  post.yml
tests/goose/: Cargo.toml  main.rs
tests/goose/src/: main.rs
