[package]
name = "sharded-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.32"
pickledb = "0.5.1"
serde = "1.0.152"
serde_derive = "1.0.152"
tokio = { version = "1.25.0", features = ["full"]}
warp = "0.3.3"
