[package]
name = "noise_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
bincode = "1.3.3"
blist = "0.0.4"
clap = { version = "4.1.13", features = ["derive"] }
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
tokio = "1.26.0"
