[package]
name = "noise_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
assert_cmd = "2.0.10"
blist = "0.0.4"
drill = "0.8.2"
predicates = "3.0.2"
reqwest = "0.11.15"
serde = { version = "1.0.158", features = ["derive"] }
tokio = "1.26.0"
tokio-test = "0.4.2"
